# Ticket-USA

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  tickets-many.csv  tickets.csv
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: claude_agent.py
backend/app/api/: deps.py  health.py  jobs.py  stream.py
backend/app/core/: csv_parser.py  events.py  job_store.py
backend/app/models/: schemas.py
backend/app/scraper/: base.py  browser_pool.py  dmv_scraper.py  mock_scraper.py  orchestrator.py
backend/scripts/: explore_dmv.py  explore_dmv_stealth.py
backend/tests/: conftest.py  test_api_e2e.py  test_csv_parser.py  test_job_store.py  test_mock_scraper.py
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: dashboard.tsx  empty-state.tsx  hero.tsx  live-feed.tsx  progress-bar.tsx  results-table.tsx  stats-summary.tsx  status-badge.tsx  upload-zone.tsx
frontend/components/atoms/: card.tsx  status-badge.tsx
frontend/components/molecules/: cancel-control.tsx  empty-state.tsx  job-meta-footer.tsx  progress-bar.tsx
frontend/components/ui/: alert.tsx  (+8 more)
frontend/hooks/: use-cancel-job.ts  use-client-query.ts  use-create-job.ts  use-csv-upload.ts  use-health.ts  use-scraping-stream.ts
frontend/lib/: api-client.ts  csv-export.ts  env.ts  sample-csv.ts  utils.ts
frontend/types/: events.ts
(+5 files in other folders)
