[project]
name = "winit-backend"
version = "0.1.0"
description = "WINIT NY Parking Ticket Tracker — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "sse-starlette==2.4.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-multipart==0.0.26",
    "charset-normalizer==3.4.7",
    "beautifulsoup4==4.14.3",
    "lxml==5.4.0",
    # Playwright pinned to match the runtime image
    # (mcr.microsoft.com/playwright/python:v1.49.0-noble)
    "playwright==1.49.0",
    "anthropic==0.42.0",
    "httpx==0.28.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
